JDK 21 (#64)
* updated modules to java 21

* updated dependencies and code

* Update gradle to 8.7 and update libraries

* Add cogwheel as a dependency

* Use Cogwheel to handle WorldJSON

* Delete default world.json file

* Cleanup PrettyNBTStringVisitor

* Use Optional#isEmpty rather than null check

* Use ChatCode#asTextFormat rather than creating using TextFormat's constructor

* Remove debug message

* Use Cogwheel to handle ServerProperties

---------

Co-authored-by: _tud <98935832+UnderscoreTud@users.noreply.github.com>